--- a/css/style.css
+++ b/css/style.css
@@ -216,12 +216,8 @@ textarea:focus{
     border-color: var(--primary-color);
 }
 /*------------------ hero slider -------------*/
-.slider__col{
+.slider__wrapper{
     overflow: hidden;
-}
-.slider__item{
-    height: 650px;
-    position: relative;
 }
 .slider__item .slider__item__caption{
     display: none;
@@ -237,27 +233,33 @@ textarea:focus{
 /* slick slider */
 .slick-slider .slick-arrow{
     display: none;
+    top: 0;
+    bottom: 0;
+    width: 100px;
+    height: auto;
+    border-radius: 0;
+    opacity:0;
+    transform:translateY(0);
+    transition:opacity .5s;
     z-index: 50;
 }
 .slick-slider .slick-next {
-    right: 100px;
+    right: 0;
+    background-image: linear-gradient(to left, #777, transparent);
 }
 .slick-slider .slick-prev {
-    left: 100px;
+    left: 0;
+    background-image: linear-gradient(to right, #777, transparent);
 }
+.slick-slider:hover .slick-arrow{
+    opacity:.8;
+}
+
 .slick-slider .slick-arrow:before{
     display: block;
-     width: 50px;
-     height: 50px;
-     padding: 10px;
-     border-radius: 500px;
-     background-color: var(--second-color);
      font-size: 2rem;
     line-height: 25px;
  }
-.slick-slider .slick-arrow:hover:before{
-    background-color: var(--primary-color);
-}
 /*---------------------- features -------------*/
 .feature__card{
     padding: 0;
@@ -317,7 +319,7 @@ textarea:focus{
 .main__navbar{
     display: flex;
 }
-    /*.slider__item .slider__item__caption,*/
+    .slider__item .slider__item__caption,
     .slick-slider .slick-arrow{
         display: block;
     }
@@ -342,7 +344,9 @@ textarea:focus{
     #top__header .social__col{
          display: block;
      }
-
+    .slick-slider .slick-arrow{
+        display: block;
+    }
 
 
 }
