end footer copyright

--- a/css/style.css
+++ b/css/style.css
@@ -616,7 +616,9 @@ overflow:hidden;
 .widget__list .widget__list__item a{
 
 }
-
+.footer__copyright{
+    background-color: #465460;
+}
 /*======================================================
 ====================== MOBILE STYLES ===================
 ======================================================*/
