--- a/css/style.css
+++ b/css/style.css
@@ -622,7 +622,7 @@ overflow:hidden;
 /*======================================================
 ====================== MOBILE STYLES ===================
 ======================================================*/
-.mobile__navbar__responsive{
+.mobile__navbar{
     position: fixed;
     top: 0;
     left: -300px;
@@ -633,23 +633,23 @@ overflow:hidden;
     background-color: #eee;
     box-shadow:var(--box-shadow);
     transition:left var(--transition-time);
-    z-index: 100;
+    z-index: 99999;
 }
-.btn__mobile__navbar__toggle,
-.btn__mobile__navbar__close{
+.mobile__menu .mobile__menu__item{
+    display: block;
+}
+.btn__navbar__toggle,
+.btn__navbar__close{
     float: right;
     font-size: 1.6rem;
     cursor: pointer;
 }
-.btn__mobile__navbar__close{
+.btn__navbar__close{
     position: absolute;
     top: 10px;
     right: 20px;
 }
-.mobile__logo{
-    margin-bottom: 50px;
-    text-align: center;
-}
+
 
 /* =========================================================
 
@@ -664,6 +664,9 @@ overflow:hidden;
     }
     .member__img{
         text-align: right;
+    }
+    .btn__mobile{
+        display: none;
     }
 }
 @media screen and (max-width: 991px){
